# rust_mongo_ms

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: lib.rs  main.rs
src/config/: cors.rs  database.rs  mod.rs
src/controllers/: mod.rs  post_controller.rs
src/repository/: mod.rs  post_repository.rs
src/router/: mod.rs  v1.rs
