[package]
name = "mongo_api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
futures = "0.3.30"
reqwest = "0.12.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]
